--- a/public/index.html
+++ b/public/index.html
@@ -41,44 +41,59 @@
     -->
 </body>
 <script>
-    'use strict';
+    let deferredPrompt;
 
-    let deferredInstallPrompt = null;
+    window.addEventListener('beforeinstallprompt', (e) => {
+        // Prevent the mini-infobar from appearing on mobile
+        e.preventDefault();
+        // Stash the event so it can be triggered later.
+        deferredPrompt = e;
+        // Update UI notify the user they can install the PWA
+        showInstallPromotion();
+    });
 
-    // window.addEventListener('beforeinstallprompt', saveBeforeInstallPromptEvent);
+    buttonInstall.addEventListener('click', (e) => {
+        // Hide the app provided install promotion
+        hideMyInstallPromotion();
+        // Show the install prompt
+        deferredPrompt.prompt();
+        // Wait for the user to respond to the prompt
+        deferredPrompt.userChoice.then((choiceResult) => {
+            if (choiceResult.outcome === 'accepted') {
+                console.log('User accepted the install prompt');
+            } else {
+                console.log('User dismissed the install prompt');
+            }
+        });
+    });
 
-    // function saveBeforeInstallPromptEvent(evt) {
-    //     deferredInstallPrompt = evt;
-    //     installButton.removeAttribute('hidden');
-    // }
+    window.addEventListener('appinstalled', (evt) => {
+        // Log install to analytics
+        console.log('INSTALL: Success');
+    });
 
-    window.addEventListener('butInstall', installPWA);
+    window.addEventListener('DOMContentLoaded', () => {
+        let displayMode = 'browser tab';
+        if (navigator.standalone) {
+            displayMode = 'standalone-ios';
+        }
+        if (window.matchMedia('(display-mode: standalone)').matches) {
+            displayMode = 'standalone';
+        }
+        // Log launch display mode to analytics
+        console.log('DISPLAY_MODE_LAUNCH:', displayMode);
+    });
 
-    function installPWA(evt) {
-        // CODELAB: Add code show install prompt & hide the install button.
-        deferredInstallPrompt.prompt();
-        // Hide the install button, it can't be called twice.
-        evt.srcElement.setAttribute('hidden', true);
-
-        // CODELAB: Log user response to prompt.
-        deferredInstallPrompt.userChoice
-            .then((choice) => {
-                if (choice.outcome === 'accepted') {
-                    console.log('User accepted the A2HS prompt', choice);
-                } else {
-                    console.log('User dismissed the A2HS prompt', choice);
-                }
-                deferredInstallPrompt = null;
-            })
-    }
-
-    // CODELAB: Add event listener for appinstalled event
-    window.addEventListener('appinstalled', logAppInstalled);
-
-    function logAppInstalled(evt) {
-        // CODELAB: Add code to log the event
-        console.log('Weather App was installed.', evt);
-    }
+    window.addEventListener('DOMContentLoaded', () => {
+        window.matchMedia('(display-mode: standalone)').addListener((evt) => {
+            let displayMode = 'browser tab';
+            if (evt.matches) {
+                displayMode = 'standalone';
+            }
+            // Log display mode change to analytics
+            console.log('DISPLAY_MODE_CHANGED', displayMode);
+        });
+    });
 </script>
 
 </html>
