--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="manifest.json">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,60 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
-<script>
-    let deferredPrompt;
 
-    window.addEventListener('beforeinstallprompt', (e) => {
-        // Prevent the mini-infobar from appearing on mobile
-        e.preventDefault();
-        // Stash the event so it can be triggered later.
-        deferredPrompt = e;
-        // Update UI notify the user they can install the PWA
-        showInstallPromotion();
-    });
-
-    buttonInstall.addEventListener('click', (e) => {
-        // Hide the app provided install promotion
-        hideMyInstallPromotion();
-        // Show the install prompt
-        deferredPrompt.prompt();
-        // Wait for the user to respond to the prompt
-        deferredPrompt.userChoice.then((choiceResult) => {
-            if (choiceResult.outcome === 'accepted') {
-                console.log('User accepted the install prompt');
-            } else {
-                console.log('User dismissed the install prompt');
-            }
-        });
-    });
-
-    window.addEventListener('appinstalled', (evt) => {
-        // Log install to analytics
-        console.log('INSTALL: Success');
-    });
-
-    window.addEventListener('DOMContentLoaded', () => {
-        let displayMode = 'browser tab';
-        if (navigator.standalone) {
-            displayMode = 'standalone-ios';
-        }
-        if (window.matchMedia('(display-mode: standalone)').matches) {
-            displayMode = 'standalone';
-        }
-        // Log launch display mode to analytics
-        console.log('DISPLAY_MODE_LAUNCH:', displayMode);
-    });
-
-    window.addEventListener('DOMContentLoaded', () => {
-        window.matchMedia('(display-mode: standalone)').addListener((evt) => {
-            let displayMode = 'browser tab';
-            if (evt.matches) {
-                displayMode = 'standalone';
-            }
-            // Log display mode change to analytics
-            console.log('DISPLAY_MODE_CHANGED', displayMode);
-        });
-    });
-</script>
 
 </html>
